--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -2,13 +2,285 @@
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
   "page:Q9UKR3":
-  {"table:mutList": 
-    {"columns": ["MSA Ind", "Mutation", "Count", "Type", "SASA"], 
-    "rows": [[[203, 20, 6], "R95H", 1, "High", 0.0], 
-             [423, "E270G", 2, "High", 84.787463950827], 
-             [139, "E39T", 4, "High", 81.31261114854439], 
-             [439, "F285I", 3, "High", 13.28391037643908]
-          ]
-    }
+  {
+  "table:mutList": {
+    "columns": [
+      "reference",
+      "target",
+      "ref_AS_pos",
+      "ref_AS_res",
+      "t_AS_pos",
+      "t_AS_res",
+      "ref_tmscore",
+      "target_tmscore",
+      "optimal_rmsd",
+      "PyMOL_rmsd",
+      "tm_rmsd",
+      "Score",
+      "max_refcoverage",
+      "max_tcoverage",
+      "aln length",
+      "tm_len",
+      "ref_res",
+      "target_res",
+      "e_value",
+      "Identity (%)",
+      "similarity (%)",
+      "methods",
+      "ensembl"
+    ],
+    "rows": [
+      [
+        "Q9UKR3",
+        "A1L453",
+        "76, 124, 218",
+        "H, D, S",
+        "100, 150, 245",
+        "H, D, S",
+        0.7758,
+        0.66313,
+        3.04,
+        0.88,
+        2.07,
+        561.02,
+        95.31,
+        80.98,
+        289,
+        229,
+        277,
+        326,
+        1.97e-12,
+        27.34,
+        38.41,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "A6NIE9",
+        "76, 124, 218",
+        "H, D, S",
+        "114, 161, 262",
+        "H, D, S",
+        0.75813,
+        0.67501,
+        2.04,
+        0.92,
+        2.47,
+        467.94,
+        100.0,
+        96.17,
+        316,
+        229,
+        277,
+        313,
+        2.53e-10,
+        29.43,
+        39.56,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "A8MTI9",
+        "76, 124, 218",
+        "H, D, S",
+        "121, 172, 275",
+        "H, D, S",
+        0.71376,
+        0.5377,
+        2.99,
+        1.0,
+        3.01,
+        477.25,
+        100.0,
+        80.8,
+        316,
+        224,
+        277,
+        375,
+        6.04e-08,
+        23.73,
+        34.18,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "O43240",
+        "76, 124, 218",
+        "H, D, S",
+        "86, 137, 229",
+        "H, D, S",
+        0.7961,
+        0.79887,
+        2.01,
+        0.77,
+        2.01,
+        573.55,
+        89.53,
+        89.86,
+        242,
+        235,
+        277,
+        276,
+        0.0,
+        40.91,
+        56.2,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "O60259",
+        "76, 124, 218",
+        "H, D, S",
+        "73, 120, 212",
+        "H, D, S",
+        0.81986,
+        0.872,
+        1.31,
+        0.54,
+        1.7,
+        680.72,
+        94.58,
+        100.0,
+        266,
+        237,
+        277,
+        260,
+        0.0,
+        45.86,
+        59.77,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "P00746",
+        "76, 124, 218",
+        "H, D, S",
+        "66, 114, 208",
+        "H, D, S",
+        0.7868,
+        0.85855,
+        1.54,
+        0.63,
+        1.95,
+        587.14,
+        96.03,
+        100.0,
+        264,
+        231,
+        277,
+        253,
+        0.0,
+        32.95,
+        51.89,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "P06870",
+        "76, 124, 218",
+        "H, D, S",
+        "65, 120, 214",
+        "H, D, S",
+        0.82218,
+        0.86777,
+        1.62,
+        0.67,
+        1.76,
+        638.35,
+        98.56,
+        103.82,
+        264,
+        239,
+        277,
+        262,
+        0.0,
+        39.02,
+        53.79,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "P07288",
+        "76, 124, 218",
+        "H, D, S",
+        "65, 120, 213",
+        "H, D, S",
+        0.82452,
+        0.87371,
+        1.36,
+        0.54,
+        1.87,
+        646.08,
+        97.11,
+        100.0,
+        268,
+        239,
+        277,
+        261,
+        0.0,
+        41.79,
+        54.85,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "P07477",
+        "76, 124, 218",
+        "H, D, S",
+        "63, 107, 200",
+        "H, D, S",
+        0.80658,
+        0.90184,
+        1.72,
+        0.57,
+        1.69,
+        629.95,
+        95.31,
+        100.0,
+        260,
+        233,
+        277,
+        247,
+        0.0,
+        39.23,
+        52.69,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ],
+      [
+        "Q9UKR3",
+        "P07478",
+        "76, 124, 218",
+        "H, D, S",
+        "63, 107, 200",
+        "H, D, S",
+        0.80402,
+        0.89899,
+        1.82,
+        0.53,
+        1.86,
+        627.09,
+        90.97,
+        100.0,
+        261,
+        233,
+        277,
+        247,
+        0.0,
+        38.7,
+        52.87,
+        "prost, mmseqs2, foldseek, blast",
+        0
+      ]
+    ]
   }
+}
 }
