--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -1,8 +1,17 @@
-{"table:unipList":
+{"showToc": false,
+"title": "Q9UKR3-Protease-Human-Paralogs", 
+"h2:caption": "Q9UKR3-Protease-Paralogs", 
+"md:info": "This page presents the detail results of **Q9UKR3**" **Protease** **Protein**, 
+"h3:caption2": "List of Proteins", 
+  "table:unipList":
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
   "page:Q9UKR3":
-  {
+{"h2:caption": "Q9UKR3 - Results",
+"md:info0": "This page presents details for the Q9UKR3 protein. Aplhafold2 structure predeiction shown below.", 
+"pdb:structure": {"pdb": "https://alphafold.ebi.ac.uk/files/AF-Q9UKR3-F1-model_v4.pdb", 
+"name": "Q9UKR3 Alphafold2 Prediction", "height": "300px"}, 
+"h3:all": "List of Q9UKR3 Paralogs", 
   "table:mutList": {
     "columns": [
       "reference",
