--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -1,7 +1,7 @@
 {"showToc": false,
 "title": "Q9UKR3-Protease-Human-Paralogs", 
 "h2:caption": "Q9UKR3-Protease-Paralogs", 
-"md:info": "This page presents the detail results of **Q9UKR3**" **Protease** **Protein**, 
+"md:info": "This page presents the detail results of **Q9UKR3**" **Protease** **Protein**",
 "h3:caption2": "List of Proteins", 
   "table:unipList":
   {"columns": ["l:Uniprot ID"],
