--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -7,10 +7,11 @@
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
   
-"md:info0": "This page presents details for the Q9UKR3 protein. Aplhafold2 structure predeiction shown below.", 
-"pdb:structure": {"pdb": "https://alphafold.ebi.ac.uk/files/AF-Q9UKR3-F1-model_v4.pdb", 
-"name": "Q9UKR3 Alphafold2 Prediction", "height": "300px"}, 
-"h3:all": "List of Protease Paralogs of the Q9UKR3 Protein", 
+"p:pc1:1": "8217_scaled_20_pc1.png!",
+    "img:logo:1": {
+        "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
+        "height": "200"
+    }
   
 "page:Q9UKR3":
 {"h2:caption": "Q9UKR3 - Results",
