--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -6,7 +6,7 @@
 "table:unipList":
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
-"p:intro:6": "8217_scaled_20_pc1.png!",
+"p:intro:6": "8217_scaled_20_pc1!",
     "img:logo:6": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
         "height": "200"
