--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -22,6 +22,10 @@
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
         "height": "200"
     },
+   "img:logo5:3": {
+        "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
+        "height": "200"
+    },
 "page:Q9UKR3":
 {"h2:caption": "Q9UKR3 - Results",
  "alnpdb:alignment":{
