--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -6,7 +6,19 @@
 "table:unipList":
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
-    "img:logo1:2.4": {
+"page:Q9UKR3":
+{"h2:caption": "Q9UKR3 - Results",
+ "alnpdb:alignment":{
+    "pdb1":"https://alphafold.ebi.ac.uk/files/AF-O60091-F1-model_v4.pdb",
+    "name1":"O60091",
+    "pdb2":"https://alphafold.ebi.ac.uk/files/AF-P36525-F1-model_v4.pdb",
+    "name2":"P36525",
+    "alnpdb":"https://raw.githubusercontent.com/sarwarchy20/tmp_json/master/test_data/O60091.P36525.pdb",
+    "lineLen":75,
+    "info":"PROST found O60091 as homolog of P36525"
+  },
+  "h3:caption": "PCs plots",
+  "img:logo1:2.4": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
         "height": "230"
     },
@@ -26,17 +38,6 @@
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
         "height": "230"
     },
-"page:Q9UKR3":
-{"h2:caption": "Q9UKR3 - Results",
- "alnpdb:alignment":{
-    "pdb1":"https://alphafold.ebi.ac.uk/files/AF-O60091-F1-model_v4.pdb",
-    "name1":"O60091",
-    "pdb2":"https://alphafold.ebi.ac.uk/files/AF-P36525-F1-model_v4.pdb",
-    "name2":"P36525",
-    "alnpdb":"https://raw.githubusercontent.com/sarwarchy20/tmp_json/master/test_data/O60091.P36525.pdb",
-    "lineLen":75,
-    "info":"PROST found O60091 as homolog of P36525"
-  },
 "h3:all": "List of Protease Paralogs of the Q9UKR3 Protein", 
  "table:mutList": {
     "columns": [
