--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -7,7 +7,7 @@
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
 "page:Q9UKR3":
-{"h2:caption": "Q9UKR3 - Results",
+{"h3:caption": "O60091 and P36525 Alignment",
  "alnpdb:alignment":{
     "pdb1":"https://alphafold.ebi.ac.uk/files/AF-O60091-F1-model_v4.pdb",
     "name1":"O60091",
