--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -7,12 +7,12 @@
   {"columns": ["l:Uniprot ID"],
   "rows": [["Q9UKR3@Q9UKR3"]]},
 "page:Q9UKR3":
-{"h2:caption": "O60091 and P36525 Alignment",
+{"h2:caption": "A1L453 and A6NIE9 Alignment",
  "alnpdb:alignment":{
-    "pdb1":"https://alphafold.ebi.ac.uk/files/AF-O60091-F1-model_v4.pdb",
-    "name1":"O60091",
-    "pdb2":"https://alphafold.ebi.ac.uk/files/AF-P36525-F1-model_v4.pdb",
-    "name2":"P36525",
+    "pdb1":"https://alphafold.ebi.ac.uk/files/AF-A1L453-F1-model_v4.pdb",
+    "name1":"A1L453",
+    "pdb2":"https://alphafold.ebi.ac.uk/files/AF-A6NIE9-F1-model_v4.pdb",
+    "name2":"A6NIE9",
     "alnpdb":"https://raw.githubusercontent.com/sarwarchy20/tmp_json/master/test_data/O60091.P36525.pdb",
     "lineLen":75,
     "info":"PROST found O60091 as homolog of P36525"
