--- a/Q9UKR3-Protease-Paralogs.json
+++ b/Q9UKR3-Protease-Paralogs.json
@@ -18,26 +18,22 @@
     "info":"Aligned P08217 with Q9Y5K2 using PROST. The alignment with FATCAT tool produces significant similarity with a p-value of 1.44e-15."
   },
   "h3:caption": "PCs plots",
-  "md:info":"The superimposed figures scaled at ± 50 at their PC1, PC2 extremes for two known serine proteases - **P08217:Chymotrypsin-like elastase family member 2A** and **Q9Y5K2:Kallikrein-4**.(Figures below, from left to right: PC1 and PC2 for P08217, PC1 and PC2 for Q9Y5K2)",
-  "img:logo1:2.4": {
+  "md:info":"The superimposed figures of PC1 and PC2 extremes for two known serine proteases - **P08217:Chymotrypsin-like elastase family member 2A** and **Q9Y5K2:Kallikrein-4**.(Figures below, from left to right: PC1 and PC2 for P08217, PC1 and PC2 for Q9Y5K2)",
+  "img:logo1:3": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/P08217_scaled_50_pc1.png",
         "height": "230",
         "name1":"P08217_scaled_50_pc1"
     },
-    "img:logo2:2.4": {
+    "img:logo2:3": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/P08217_scaled_50_pc2.png",
         "height": "230"
     },
-   "img:logo3:2.4": {
+   "img:logo3:3": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/Q9Y5K2_scaled_50_pc1.png",
         "height": "230"
     },
-   "img:logo4:2.4": {
+   "img:logo4:3": {
         "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/Q9Y5K2_scaled_50_pc2.png",
-        "height": "230"
-    },
-   "img:logo5:2.4": {
-        "src": "https://raw.githubusercontent.com/sarwarchy20/paralog_project/master/data/8217_scaled_20_pc1.png",
         "height": "230"
     },
 "h3:all": "List of Protease Paralogs of the Q9UKR3 Protein", 
